# django-example-project

./: .dockerignore  .evnexample  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
project/: manage.py
project/api/: urls.py
project/core/: asgi.py  celery.py  settings.py  wsgi.py
scripts/: generate_psql.py
